Add ConnectionStrings to appsettings.json

--- a/GraphQL.API/GraphQL.API/appsettings.json
+++ b/GraphQL.API/GraphQL.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GraphQLDBConnection": "Server=LAPTOP-RN2RML2L\\SQLEXPRESS;Database=TechEventDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
